Re-add Thoma's fix for text overflow, various fixes
- Fix merge error
- Fix searching
- Reduce size of group boxes

--- a/Website/public/css/groupelements.css
+++ b/Website/public/css/groupelements.css
@@ -22,6 +22,9 @@
 #group-description {
     grid-area: group-desc;
     min-height: 20em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 #group-member-list {
